# face_characters_detection

./: .flaskenv  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
app/config/: __init__.py  app_config.py  constants.py
app/fast_app/: __init__.py  image_analyser_router.py
app/flask_app/: __init__.py  image_analyser_namespace.py
app/schema/: __init__.py
app/utils/: __init__.py  image_saver.py
