[tool.poetry]
name = "face-characters-detection"
version = "0.1.0"
description = ""
authors = ["Vetrichelvan"]
readme = "README.md"
packages = [{include = "face_characters_detection"}]

[tool.poetry.dependencies]
python = "3.9.16"
tensorflow-macos = "^2.11.0"
tensorflow-metal = "^0.7.1"
fastapi = "^0.90.0"
flask = "^2.2.2"
pillow = "^9.4.0"
opencv-contrib-python = "^4.7.0.68"
pandas = "^1.5.3"
tqdm = "^4.64.1"
gdown = "^4.6.0"
pydantic = "^1.10.4"
flask-restx = "^1.0.6"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.1"
pylint-quotes = "^0.2.3"
black = {extras = ["d"], version = "^23.1.0"}
isort = "^5.12.0"
pre-commit = "^3.0.4"
python-dotenv = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
